@@ -1,3 +1,9 @@
+2018-09-07  Janus Weil  <janus@gcc.gnu.org>
+
+	Backported from trunk
+	PR fortran/86116
+	* gfortran.dg/generic_34.f90: New test case.
+
 2018-09-03  Tom de Vries  <tdevries@suse.de>
 
 	backport from trunk:
